Thu Oct 22 15:30:08 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): peephole optimization for
	  branchnil jumps.

	* compile.c (iseq_compile_each): generate save navigation operator
	  code.

	* insns.def (branchnil): new opcode to pop the tos and branch if
	  it is nil.

	* parse.y (NEW_QCALL, call_op, parser_yylex): parse token '.?'.
	  [Feature #11537]

Thu Oct 22 13:16:19 2015  Guilherme Reis Campos  <guilhermekbsa@gmail.com>

	* dir.c (ruby_brace_expand): glob brace expansion edge case fix.
	  When there are closing braces '}' before a open brace '{' it
	  must be ignored and considered as literal.
	  [ruby-core:71138] [Bug #11609]

Thu Oct 22 13:13:49 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (argf_next_argv): check ARGV element type, and try
	  conversion if necessary.  [ruby-core:71140] [Bug #11610]

Thu Oct 22 11:11:16 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/ftp/test_ftp.rb: add tests for getbinaryfile and
	  gettextfile.

Wed Oct 21 18:34:06 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_magic_comment): allow a sole magic comment without
	  indicators, neither other non-space comments.  [Feature #8976]

Tue Oct 20 12:17:56 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/prime.rb: Add basic argument checking to Prime.prime?
	    [Bug #11606]

Tue Oct 20 12:17:50 2015  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/prime.rb: Optimize Integer#prime?
	  Patch by Nick Slocum [Bug #10354]

Tue Oct 20 08:12:47 2015  Rei Odaira  <Rei.Odaira@gmail.com>

	* configure.in: pthread_getattr_np is broken on AIX.
	  More specifically, the stack address and size returned are
	  not correct.

Tue Oct 20 05:54:46 2015  Eric Wong  <e@80x24.org>

	* ext/fiddle/closure.c (callback): static function

Mon Oct 19 10:33:46 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/init.c (rsock_raise_socket_error): get rid of a glibc
	  bug.  [ruby-core:71100] [Bug #11600]
